# search-algorithms

./: .gitignore  CMakeLists.txt  README.md
buildtest/: CMakeCache.txt  Makefile  cmake_install.cmake  search_tests
includes/: jump_search.h  searching.h
plots/: FigFinal.gnu  Fig_time.gnu  Fig_time_bs_ivsr.gnu  Fig_time_bsi.gnu  Fig_time_bsr.gnu  Fig_time_bvstvsfib.gnu  Fig_time_fs.gnu  Fig_time_fs_2wc.gnu  Fig_time_js.gnu  Fig_time_ls.gnu  Fig_time_lvsbs.gnu  Fig_time_lvsjs.gnu  Fig_time_ts_ivsr.gnu  Fig_time_tsi.gnu  Fig_time_tsr.gnu  figure-gnuplot.tex  lsearch_time.eps
report/: 1_intro.tex  2_metodos.tex  3_resultados.tex  4_discussao.tex  5_conclusao.tex  mkRel  report.tex
src/: fibonacci_search.cpp  iterative_binary_search.cpp  iterative_linear_search.cpp  iterative_ternary_search.cpp  jump_search.cpp  recursive_binary_search.cpp  recursive_ternary_search.cpp  searching.cpp  test_searching.cpp  timing_search.cpp
test/: search_lin_test.cpp
